--- a/views/admin/posts/create.ejs
+++ b/views/admin/posts/create.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Cadastro Produtos</title>
+  <title>Cadastro de Sensores</title>
   <%- include('../../imports'); -%>
 </head>
 <body>
@@ -10,27 +10,19 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1>Novo Produto</h1>
+        <h1>Novo Sensor</h1>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
           <form action="create" method="POST" enctype="multipart/form-data">
               <div class="form-group">
-                <label for="postTitle">Nome</label>
-                <input name="title" type="text" class="form-control" id="postTitle" placeholder="Título do post">
-              </div>
-              <div class="form-group">
-                <label for="postImage">Imagem</label>
-                <input type="file" name="image" class="form-control" />
+                <label for="postTitle">Modelo</label>
+                <input name="title" type="text" class="form-control" id="postTitle" placeholder="Tipo de Sensor">
               </div>
               <div class="form-group">
                 <label for="postDescription">Descrição</label>
                 <textarea name="description" type="text" class="form-control" id="postDescription" placeholder=""></textarea>
-              </div>
-              <div class="form-group">
-                <label for="postBody">Preço</label>
-                <input name="postBody" type="text" class="form-control" id="postBody" placeholder="">
               </div>
               <button type="submit" class="btn btn-primary">Salvar</button>
             </form>
