--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -7,16 +7,13 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="/">Home <span class="sr-only">(Página atual)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/testimonials">Carrinho de compras</a>
-      </li>
+      </li>      
       <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Administração
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="/admin/posts">Controle Produtos</a>
+            <a class="dropdown-item" href="/admin/posts">Controle Sensores</a>
           </div>
       </li>
     </ul>
