--- a/views/admin/posts/index.ejs
+++ b/views/admin/posts/index.ejs
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Administração Produtos</title>
+  <title>Listagem Sensores</title>
   <%- include('../../imports'); -%>
 </head>
 <body>
   <%- include('../../navbar'); -%>
   <div class="container">
     <div class="row">
-        <h1>Administração Produtos</h1>
+        <h1>Controle Sensores</h1>
     </div>
 
     <div class="row mb-2">
-        <a href="/admin/posts/create" class="btn btn-success">Novo Produto</a>
+        <a href="/admin/posts/create" class="btn btn-success">Novo Sensor</a>
     </div>
 
     <div class="row">
@@ -21,7 +21,8 @@
             <thead class="thead-dark">
               <tr>
                 <th scope="col">Código</th>
-                <th scope="col">Nome</th>
+                <th scope="col">Descrição</th>
+                <th scope="col"></th>
               </tr>
             </thead>
             <tbody>
