--- a/views/post_card.ejs
+++ b/views/post_card.ejs
@@ -1,7 +1,8 @@
 <div class="card mb-3" style="max-width: 540px;">
   <div class="row no-gutters">
     <div class="col-md-5">
-      <img src="<%= `/images/${post.image}` %>" class="card-img-top">
+      <a>Temperatura: ##Graus</a>
+      <a>Umidade: ##%</a>
     </div>
     <div class="col-md-5">
       <div class="card-body">
@@ -14,8 +15,9 @@
         <p class="card-text"></p>
           <a><%= post.body %></a>          
         </p>        
-        <a href="#" class="btn btn-primary">Adicionar ao carrinho</a>
+        <a href="#" class="btn btn-primary">Ligar</a>
       </div>
-    </div>
+    </div>    
   </div>
 </div>
+
